center hero on firefox fix #55

--- a/app/assets/stylesheets/grayscale.css.scss
+++ b/app/assets/stylesheets/grayscale.css.scss
@@ -125,6 +125,7 @@ a:focus {
     display: table;
     padding: 100px 0;
     height: 100%;
+    width: 100%;
     text-align: center;
     color: #fff;
     background-color: #000;
@@ -137,8 +138,6 @@ a:focus {
 .hero-body {
     display: table-cell;
     vertical-align: middle;
-    width: 100%;
-    height: 100%;
 }
 
 .brand-heading {
